fix: fix pageSize
